fixed small css issue

--- a/public/mealPlanner.css
+++ b/public/mealPlanner.css
@@ -391,6 +391,10 @@ html, body {
 	margin-left: 20px;
 }
 
+.numServedDiv {
+	margin-left: 20px;
+}
+
 .communityCategories {
 	margin-left: 20px;
 }
